# zio

./: .coderabbit.yaml  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  DEBUG-460.md  DEVELOPMENT.md  LICENSE  README.md  a.diff  build.zig  build.zig.zon  check.sh  coroutines.c  coroutines_zefi.zig  edns0.txt  linux_stack_growth_poc.zig  mkdocs.yml  rtl_user_stack_example.zig  stack_allocator_windows.zig  test_runner.zig  wait_queue_bench.zig  windows_stack_growth_recursive_poc.zig
.claude/: settings.json
.github/: FUNDING.yml
benchmarks/: Cargo.toml  concurrent_queue_bench.zig  echo_server.go  echo_server.rs  echo_server.zig  echo_server_may.rs  echo_server_multi.rs  echo_server_tokio.rs  ping_pong.go  ping_pong.rs  ping_pong.zig  ping_pong_current_thread.rs  ping_pong_may.rs  ping_pong_tokio.rs  run.sh  spawn_simple.zig  spawn_throughput.go  spawn_throughput.zig  spawn_throughput_may.rs  spawn_throughput_tokio.rs  spawn_tree.zig  wakeup_latency.zig  yield_only.zig
docs/: changelog.md  faq.md  getting-started.md  http-server.md  index.md  ntp-client.md  parallel-grep.md  signals.md  stdio.md  sync.md  tasks.md  tcp-server.md
examples/: coro_demo.zig  error_demo.zig  ev_demo.zig  future_demo.zig  hello_world.zig  http_client.zig  http_server.zig  mini_redis.zig  mutex_demo.zig  ntp_client.zig  parallel_grep.zig  ping.zig  producer_consumer.zig  signal_demo.zig  sleep.zig  sleep_demo.zig  task_demo.zig  tcp_client.zig  tcp_echo_server.zig  tcp_echo_server_plain.zig  tcp_echo_server_stdio.zig  tcp_pingpong_bench.zig  tcp_test.zig  test_blocking.zig  tls_demo.zig  (+3 more)
(+291 files in other folders)
