[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
may = "0.3"
num_cpus = "1.16"

[[bin]]
name = "ping_pong_tokio"
path = "ping_pong_tokio.rs"

[[bin]]
name = "echo_server_tokio"
path = "echo_server_tokio.rs"

[[bin]]
name = "ping_pong_may"
path = "ping_pong_may.rs"

[[bin]]
name = "echo_server_may"
path = "echo_server_may.rs"

[[bin]]
name = "spawn_throughput_tokio"
path = "spawn_throughput_tokio.rs"

[[bin]]
name = "spawn_throughput_may"
path = "spawn_throughput_may.rs"
